# Perkolacje

./: CMakeLists.txt  README.md  main.cpp  percolation.cbp  percolation.depend  percolation.layout  union_find.h
include/: Perkolacja.h  union_find.h
src/: Perkolacja.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  test_uf.cpp
